# XPlane-Plugin-Template

./: .gitignore  CMakeLists.txt  README.md  build_unix.sh  build_win.bat
src/: XPlugin.cpp  XPlugin.h
